<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_32dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        app:icon="@drawable/ic_calculator"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list"
        app:icon="@drawable/ic_list"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonCalc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        app:icon="@drawable/ic_weather"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
